<resources>
    <string name="app_name">Formulario Persona</string>
    <string name="txt_nombre">Ingrese su nombre:</string>
    <string name="edit_nombre">Juan</string>
    <string name="txt_apellido">Ingrese su apellido:</string>
    <string name="txt_sexo">Sexo:</string>
    <string name="txt_hombre">Hombre</string>
    <string name="txt_mujer">Mujer</string>
    <string name="btn_guardar">Guardar</string>
    <string name="txt_error">Datos incompletos!</string>
    <string name="txt_datos_ingresados1">Datos ingresados exitosamente!\nNombre -</string>
    <string name="txt_datos_ingresados2">\nApellido -</string>
    <string name="txt_datos_ingresados3">\nDNI -</string>
    <string name="txt_datos_ingresados4">\nSexo -</string>
</resources>