<?xml version = "1.0" encoding = "utf-8"?>

<LinearLayout
    xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    android:orientation = "vertical"
    tools:context = ".MainActivity">

    <TextView
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:layout_marginLeft = "10dp"
        android:layout_marginTop = "10dp"
        android:text = "@string/txt_nombre"
        android:textSize = "25dp"
        android:textColor = "@color/black"
    />

    <EditText
        android:id = "@+id/editNombre"
        android:layout_width = "400dp"
        android:layout_height = "wrap_content"
        android:layout_marginLeft = "5dp"
        android:hint = "@string/edit_nombre"
        android:padding = "10dp"
    />

    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_marginLeft = "10dp"
        android:layout_marginTop = "10dp"
        android:text = "@string/txt_apellido"
        android:textSize = "25dp"
        android:textColor = "@color/black"
    />

    <EditText
        android:id = "@+id/editApellido"
        android:layout_width = "400dp"
        android:layout_height = "wrap_content"
        android:layout_marginLeft = "5dp"
        android:hint = "Pérez"
        android:padding = "10dp"
    />

    <LinearLayout
        android:orientation = "horizontal"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:layout_marginTop = "10dp">

        <TextView
            android:id = "@+id/txtDNI"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_marginLeft = "10dp"
            android:text = "DNI:"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        />

        <EditText
            android:id = "@+id/editDNI"
            android:layout_width = "356dp"
            android:layout_height = "wrap_content"
            android:layout_marginLeft = "5dp"
            android:hint = "33263408"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:orientation = "horizontal"
        android:layout_marginTop = "10dp">

        <TextView
            android:id = "@+id/txtSexo"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_marginLeft = "10dp"
            android:layout_gravity="center"
            android:text = "@string/txt_sexo"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id = "@+id/radioHombre"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:text = "@string/txt_hombre"
                android:textSize = "20dp"
                android:textColor = "@color/black"
            />

            <RadioButton
                android:id = "@+id/radioMujer"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:text = "@string/txt_mujer"
                android:textSize = "20dp"
                android:textColor = "@color/black"
            />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id = "@+id/buttonGuardar"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_gravity = "center"
        android:layout_marginTop = "10dp"
        android:text = "@string/btn_guardar"
        android:drawableLeft = "@android:drawable/ic_menu_edit"
    />
</LinearLayout>